V2-changed the title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>replit</title>
+    <title>Js Bootstrap Modify Array Items</title>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
     <link
       rel="stylesheet"
